syntax = "proto3";

package sati_module_resource;

import "resource.hello.proto";

service HomeService {
    rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
    rpc GetHome (GetHomeRequest) returns (ManyHomeResponse);
    rpc GetHomeById (GetHomeByIdRequest) returns (HomeResponse);
    rpc CreateHome (CreateHomeRequest) returns (HomeResponse);
    rpc UpdateHome (UpdateHomeRequest) returns (HomeResponse);
    rpc DeleteHome (DeleteHomeRequest) returns (HomeResponse);
}

message GetHomeRequest {
}

message GetHomeByIdRequest {
    string id = 1;
}

message Home {
    string id = 1;
    string type = 2;
    string resourceId = 3;
    string background = 4;
    string name = 5;
    string description = 6;
    string author = 7;
    int32 position = 8;
    int32 createTime = 9;
    int32 updateTime = 10;
}

message HomeResponse {
    Home data = 1;
}

message ManyHomeResponse {
    repeated Home data = 2;
}

message CreateHomeRequest {
    string type = 1;
    string resourceId = 2;
    string background = 3;
    string name = 4;
    string description = 5;
    string author = 6;
    int32 position = 7;
}

message UpdateHomeRequest {
    string id = 1;
    string type = 2;
    string resourceId = 3;
    string background = 4;
    string name = 5;
    string description = 6;
    string author = 7;
    int32 position = 8;
}

message DeleteHomeRequest {
    string id = 1;
}
